# loop-client

./: .gitmodules  License.txt  README.md  pyproject.toml
.github/workflows/: github-actions-build-esp-container.yml  github-actions-build-loop-client-zephyr.yml  github-actions-build-nrf-container copy.yml  github-actions-build-nrf-sample.yml  github-actions-build-sdk-containers.yml  github-actions-docs-deploy.yml  github-actions-docs-smoke_test.yml  github-actions-docs.yml  github-actions-flash-nrf-sample.yml
configs/: nrf52840dk.json
docs/source/: conf.py  index.rst  modules.rst
firmware/esp-idf/docker/: Dockerfile
firmware/sdk-nrf/docker/: Dockerfile  entrypoint.sh
src/loop_client/: __init__.py  dut.py  flasher.py  flasher_espressif.py  flasher_jlink.py  flasher_nordic.py  loop.py
