[project]
name = "loop-client"
version = "0.1.0"
description = "Local Test System to perform HIL tests for custom IoT Hardware during development and production"
authors = [
    { name = "Matthias Boesl", email = "matthias.boesl@gmail.com" }
]

dependencies = [
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=1.3.0",
    "flasher",
    "pynrfjprog>=10.23.0",
    "esptool>=4.6.2",
    "black>=23.9.1",
]

readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
